# logos-yolo-board-module

./: .gitignore  CMakeLists.txt  README.md  flake.nix  manifest.json  metadata.json  result
docs/: inter-module-comm.md  threads-howto.md
src/: i_yolo_board_module.h  yolo_board_module.cpp  yolo_board_module.h
